--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
         id: create-token
         uses: actions/create-github-app-token@v1
         with:
-          app-id: test
+          app-id: ${{ secrets.APP_ID }}
           private-key: ${{ secrets.CZI_RELEASE_PLEASE_PK }}
 
       - name: Import GPG key
