--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
         id: create-token
         uses: actions/create-github-app-token@v1
         with:
-          app-id: snowflake-infra-fork
+          app-id: ${{secrets.APP_ID}}
           private-key: ${{ secrets.PRIVATE_KEY }}
 
       - name: Import GPG key
