--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,17 +4,11 @@ on:
       - main
     tags:
       - '*'
-
+permissions: write-all
 name: release
 jobs:
   release-please:
     runs-on: macos-latest
-    permissions:
-      contents: write
-      pull-requests: write
-      repository-projects: write
-      packages: write
-
     steps:
       - uses: actions/github-script@v6
         id: configure-changelog
